erDiagram
  users {
    string _id PK
    string name
    string lastName
    string email UK
    string passwordHash
    string role
    datetime createdAt
  }

  weather_stations {
    string _id PK
    string name
    double location_latitude
    double location_longitude
    string sensorModel
    string status
    string ownerId FK
    bool alertSettings_extremeHeat
    bool alertSettings_frost
    bool alertSettings_storm
    bool alertSettings_criticalHumidity
    datetime createdAt
  }

  measurements {
    string _id PK
    string stationId FK
    double temperature
    double humidity
    double pressure
    datetime reportedAt
    bool alertStatus
    string alertType
    datetime createdAt
  }

  user_notification_profiles {
    string _id PK "userId"
    array notificationPreferences "stationId + alertTypes"
    object deliveryChannels_telegram "chatId"
    object deliveryChannels_log "enabled"
    bool deliveryChannels_inApp
    object telegramLinking "code + expiresAt"
    index notificationPreferences_stationId
    index telegramLinking_code
  }

  notifications {
    string _id PK
    string userId FK
    string stationId FK
    string stationName
    string alertType
    double temperature
    double humidity
    double pressure
    datetime reportedAt
    datetime createdAt
    datetime readAt "nullable"
    string messageId
    index userId_createdAt "userId ASC, createdAt DESC"
    unique userId_messageId "partial unique, userId ASC, messageId ASC"
  }

  users ||--o{ weather_stations : owns
  weather_stations ||--o{ measurements : records
  users ||--|| user_notification_profiles : has
  user_notification_profiles }o--o{ weather_stations : subscribes_to
  users ||--o{ notifications : receives
  weather_stations ||--o{ notifications : emits
